assets/styles/components/_elements.scss
// Elements

$body-line-height: (
  epub: 1.5em,
  prince: 1.5em,
  web: 1.5em,
) !default;

$h2-font-family: $font-1 !default;
$h1-font-family: $font-1 !default;

$para-align: (
  epub: initial,
  prince: justify,
  web: justify,
) !default;

$blockquote-font-size: 0.95em !default;
$blockquote-margin-top: 0.5em !default;
$blockquote-margin-right: 0 !default;
$blockquote-margin-bottom: 0.5em !default;
$blockquote-margin-left: 2.5em !default;
$blockquote-line-height: 1.4em !default;
$blockquote-font-style: italic !default;

// Override variables above this line, using the !default flag to allow further overrides.
@import 'variables/elements';

// Add custom SCSS below these imports and includes.
@import 'components/elements';

p {
  text-indent: 1em;
}

blockquote {
  background-color: transparent;
  background-image: none;
  border-width:  0px;
  padding: 0px;
}

table {
 border: none;
}

blockquote p {
  padding: 0px;
  font-size: 1em;
  margin: 0px;
}

.quote-cite {
  margin-top: 0px;
  margin-bottom: 0.5em;
  margin-left:2.5em;
  font-style: italic;
  text-align: right;
}

.quote-cite p {
  margin-top: 0px;
  font-style: italic;
  text-align: right;
}

.page-num {
   position: absolute;
   left: 0px;
   text-indent: 0px;
   width: 2em;
   text-align: right;
   color: rgb(220,224,252)
}

sup.footnote {
  vertical-align: super;
  font-size: 0.85em;
}

div.footnotes {
  font-size: 0.8em;
  line-height: 1.1em;
  margin-bottom: 1em;
  margin-top: 1em;
}

div.poem {
  margin-left: 3em;
  font-size: 0.85em;
  line-height: 1.2em
}

div.poem p{
  text-indent: 0px;
}

div.printer-info {
 margin-top: 550px;
}

.book-info-container,
.book-info-container h1,
.book-info-container h2 {
 font-family: $font-1;
}
.book-info-container .table-of-content {
 font-family: $font-2;
}
.book-info .book-author {
 font-family: $font-2;
}
li.front-matter a{
 font-weight: bold;
}
li.chapter {
 margin-top: 0px;
}

#content div.index-taxons {
 @media screen and (min-width: 768px) {
  position: absolute;
  right: -177px;
  top: 300px;
//  bottom: 0px;
  width: 170px;
  border-radius: 0 6px 6px 0;
  box-shadow: 2px 2px 2px #ddd;
 }
 font-family: Arial;
 z-index: -1;
 font-size: 0.6em;
 background-color: #fff;
 border-style: none;
 margin: 10 100 0 0px;
 border: 0px;
 padding: 10px 0 0 4px;

//sorting out shadow border

 h1, h2, h3, h4, h5, p, ul, li {
  text-align: left;
  margin: 0px;
  color: #333;
  font-weight: 300;
 }
 ul {
  padding-left: 1em;
  list-style-type: none;
  line-height: 1.6em;
  margin-bottom: 4px;
 }
}

// meta links, page turning, edit button and the like //
@media screen and (min-width: 768px) {
 .edit-link {
  margin-left: -135px;
 }
 .posts-navigation {
  width: 600px;
  margin-left: -300px;
  left: 50%;
  top: 33%;
 }
 #sidebar {
  right: 12px;
  top: 0px;
  margin: 0px;
  margin-right: -75px;
  margin-top: 10px;
 }
}

